--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Pagina para decirte hola</title>
 </head>
 <body>
-    <h1 id="pablo">Hola querido putita!</h1>
+    <h1 id="pablo">Hola querido amigo!</h1>
     <br>
-    <button id="boton">Cambia la frase</button>
+    <button id="boton">siguiente</button>
 </body>
 <script src="script.js"></script>
 </html>
