cambios esteticos de la pagina

--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina para decirte hola</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <main id="main">
     <h1 id="pablo">Hola querido amigo!</h1>
+    <h3>Te tenemos un regalo!</h3>
     <br>
-    <button id="boton">siguiente</button>
+    <button id="boton" class="boton">Haz click aqui para obtenerlo!</button>
+</main>
     
 </body>
 <script src="script.js"></script>
